WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284113
REGRESSION(
287390@main
?): [macOS Release] 4x imported/w3c/web-platform-tests/fs tests are flaky (Failure in EWS)
https://bugs.webkit.org/show_bug.cgi?id=284113
Summary
REGRESSION(287390@main?): [macOS Release] 4x imported/w3c/web-platform-tests/...
Marta Darbinyan
Reported
2024-12-05 10:22:40 PST
The following tests are flaky failures on macOS Release queue. The tests appear as false-positives in EWS as well. The tests regressed around the change
287390@main
that modified the tests. imported/w3c/web-platform-tests/fs/FileSystemBaseHandle-postMessage-Error.https.window.html imported/w3c/web-platform-tests/fs/FileSystemFileHandle-getFile.https.any.worker.html imported/w3c/web-platform-tests/fs/FileSystemWritableFileStream-piped.https.any.worker.html imported/w3c/web-platform-tests/fs/FileSystemDirectoryHandle-removeEntry.https.any.worker.html Error: -FAIL getFile() provides a file that can be sliced promise_test: Unhandled rejection with value: object "InvalidStateError: The object is in an invalid state." -FAIL getFile() returns last modified time promise_test: Unhandled rejection with value: object "InvalidStateError: The object is in an invalid state." +FAIL getFile() provides a file that can be sliced promise_test: Unhandled rejection with value: object "TypeError: writer.write is not a function. (In 'writer.write(new Blob([contents]))', 'writer.write' is undefined)" +FAIL getFile() returns last modified time promise_test: Unhandled rejection with value: object "TypeError: writer.write is not a function. (In 'writer.write(new Blob(['foo']))', 'writer.write' is undefined)" Test result:
https://build.webkit.org/results/Apple-Sequoia-Release-WK2-Tests/287395@main%20(852)/results.html
History:
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Ffs%2FFileSystemBaseHandle-postMessage-Error.https.window.html&test=imported%2Fw3c%2Fweb-platform-tests%2Ffs%2FFileSystemDirectoryHandle-removeEntry.https.any.worker.html&test=imported%2Fw3c%2Fweb-platform-tests%2Ffs%2FFileSystemWritableFileStream-piped.https.any.worker.html&test=imported%2Fw3c%2Fweb-platform-tests%2Ffs%2FFileSystemFileHandle-getFile.https.any.worker.html&platform=mac
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-12-05 16:19:46 PST
<
rdar://problem/141013201
>
EWS
Comment 2
2024-12-05 16:52:18 PST
Test gardening commit
287421@main
(31de90bfa9f7): <
https://commits.webkit.org/287421@main
> Reviewed commits have been landed. Closing PR #37518 and removing active labels.
Sihui Liu
Comment 3
2024-12-10 11:21:54 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37725
EWS
Comment 4
2024-12-12 09:33:36 PST
Committed
287746@main
(652a1eef66b2): <
https://commits.webkit.org/287746@main
> Reviewed commits have been landed. Closing PR #37725 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug